# groundedwork

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
bench/: emit_results.mts  emit_results.py  gen_corpus.py  golden.json  paraphrase_eval.py  parity.py
docs/: ARCHITECTURE.md
docs/visuals/: architecture.html  hero.html  how-it-works.excalidraw  terminal.html
examples/: README.md  byo_model.py  quickstart.py  quickstart.ts  token_savings.py
fixtures/: corpus_large.json  nimbus.json
openspec/: config.yaml
openspec/changes/add-disk-persistence/: design.md  proposal.md  tasks.md
openspec/changes/add-hybrid-embeddings/: proposal.md  tasks.md
openspec/changes/add-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-signature-compaction/: design.md  proposal.md  tasks.md
openspec/specs/byom/: spec.md
openspec/specs/cache-aware-assembly/: spec.md
openspec/specs/core-retrieval/: spec.md
openspec/specs/cross-language-parity/: spec.md
openspec/specs/grounding-abstention/: spec.md
playground/: README.md  build_static.py  index.html  server.py
python/: README.md  pyproject.toml
python/groundedwork/: __init__.py
python/tests/: test_groundedwork.py  test_hybrid.py  test_real_corpus.py
ts/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ts/src/: index.ts
ts/test/: hybrid.test.ts  index.test.ts  real_corpus.test.ts
(+20 files in other folders)
